<?xml version="1.0"?>
<package>
  <name>visp_camera_calibration</name>
  <version>0.13.0</version>

  <description>
     visp_camera_calibration allows easy calibration of
     cameras using a customizable pattern and ViSP library.
  </description>
  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/visp_camera_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_calibration_parsers</build_depend> <!-- Write camera data to ini file -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- catkin_lint produce an error arround build_depend visp. -->
  <!-- This error shouldn't be considered. If build_depend visp is removed, -->
  <!-- the package is not able to build on ros buildfarm. -->
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>

  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>rqt_console</run_depend>
</package>
