<?xml version="1.0"?>
<package>
  <name>visp_hand2eye_calibration</name>
  <version>0.7.3</version>

  <description>
     visp_hand2eye_calibration estimates the camera position with respect
     to its effector using the ViSP library.
  </description>
  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/visp_hand2eye_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visp</build_depend>

  <run_depend>visp_bridge</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visp</run_depend>
</package>
