<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visp_hand2eye_calibration</name>
  <version>0.13.1</version>

  <description>
     visp_hand2eye_calibration estimates the camera position with respect
     to its effector using the ViSP library.
  </description>

  <author>Fabien Spindler</author>
  <author>Filip Novotny</author>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>

  <license>GPLv2</license>
  <url type="website">http://wiki.ros.org/visp_hand2eye_calibration</url>
  <url type="repository">https://github.com/lagadic/vision_visp/tree/ros2</url>
  <url type="bugtracker">https://github.com/lagadic/vision_visp/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>visp_bridge</depend>

  <build_depend>visp</build_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
