<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visp_tracker</name>
  <version>0.13.1</version>

  <description>
    Wraps the ViSP moving edge tracker provided by the ViSP visual
    servoing library into a ROS package.

    This computer vision algorithm computes the pose (i.e. position
    and orientation) of an object in an image. It is fast enough to
    allow object online tracking using a camera.
  </description>

  <maintainer email="fabien.spindler@inria.fr">Fabien Spindler</maintainer>

  <license>GPLv2</license>

  <url type="website">http://wiki.ros.org/visp_tracker</url>
  <url type="repository">https://github.com/lagadic/vision_visp/tree/ros2</url>
  <url type="bugtracker">https://github.com/lagadic/vision_visp/issues</url>

  <author email="laurent.garnier@irisa.fr">Laurent Garnier</author>
  <author email="fabien.spindler@inria.fr">Fabien Spindler</author>
  <author>Thomas Moulard</author>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>visp</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Recommanded: https://docs.ros.org/en/foxy/Tutorials/Intermediate/Launch/Creating-Launch-Files.html -->
  <exec_depend>ros2launch</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
